Actualización clases del Header

--- a/cube_editor_es.html
+++ b/cube_editor_es.html
@@ -32,20 +32,20 @@
 	<header id="main-header">
 		<div class="logos-header">
 			<a href="http://www.uned.es" target="_blank">
-				<img class="image" src="images/logo-uned.jpg" alt="logo-uned" width="100px" height="100px">
+				<img class="image" src="img/logo-uned.jpg" alt="logo-uned" width="100px" height="100px">
 			</a>
 		</div>
 		
 		<!--
 		<div class="logos-header">
 			<a href="http://www.ieec.uned.es" target="_blank">
-				<img class="image" src="images/logo-dieec.jpg" alt="logo-dieec" width="75px" height="75px">
+				<img class="image" src="img/logo-dieec.jpg" alt="logo-dieec" width="75px" height="75px">
 			</a>
 		</div>
 		-->
 		
-		<div class="title-header">
-			<h3>Departamento de Ingeniería Eléctrica, Electrónica y de Control</h3>
+		<div class="page-title">
+			<span>Departamento de Ingeniería Eléctrica, Electrónica y de Control INGLES</span>
 		</div>
 		
 		<div class="lang-header">
@@ -63,7 +63,6 @@
 				</div>
 			</ul>
 		</div>	
-		
  	</header>
 	
 	<main>
