--- a/index_es.html
+++ b/index_es.html
@@ -1,11 +1,11 @@
 <!-- index_es -->
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <!-- HEAD -->
 <head>
 	<meta charset="UTF-8">
-	<title>DIEEC - Entorno de Desarrollo de Arduino</title>
+	<title>DIEEC - Arduino Development Environment</title>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	
@@ -25,20 +25,20 @@
 	<header id="main-header">
 		<div class="logos-header">
 			<a href="http://www.uned.es" target="_blank">
-				<img class="image" src="images/logo-uned.jpg" alt="logo-uned" width="100px" height="100px">
+				<img class="image" src="img/logo-uned.jpg" alt="logo-uned" width="100px" height="100px">
 			</a>
 		</div>
 		
 		<!--
 		<div class="logos-header">
 			<a href="http://www.ieec.uned.es" target="_blank">
-				<img class="image" src="images/logo-dieec.jpg" alt="logo-dieec" width="75px" height="75px">
+				<img class="image" src="img/logo-dieec.jpg" alt="logo-dieec" width="75px" height="75px">
 			</a>
 		</div>
 		-->
 		
-		<div class="title-header">
-			<h3>Departamento de Ingeniería Eléctrica, Electrónica y de Control</h3>
+		<div class="page-title">
+			<span>Departamento de Ingeniería Eléctrica, Electrónica y de Control INGLES</span>
 		</div>
 		
 		<div class="lang-header">
@@ -58,10 +58,59 @@
 		</div>	
 		
  	</header>
+
+ 	<main>
+ 		<section>
+ 			<div class="container">
+	 			<div class="row">
+	 				<div class="col-md-10 col-md-offset-1 text-center">
+	 					<h2>Environment for Arduino Development</h2>
+	 					<h3 class="mt16">This environment allows students to access a real-time tool for developing, verifying and running C code for Arduino.</h3>
+	 				</div>
+	 			</div>
+	 			<div class="main-instructions">
+	 				<div class="row">
+		 				<div class="col-md-2 col-md-offset-2">
+		 					<img class="img img-responsive" src="img/console.svg" alt="Arduino Development" width="110px" />
+		 				</div>
+		 				<div class="col-md-6">
+		 					<h4>Load your code</h4>
+		 					<p>Your session will last <strong>10 minutes</strong>. You can upload your own file, use the console, or check one of the pre-loaded examples.</p>
+		 				</div>
+	 				</div>
+	 				<div class="row mt16">
+		 				<div class="col-md-2 col-md-offset-2">
+		 					<img class="img img-responsive" src="img/code_verified.svg" alt="Arduino Development" width="110px" />
+		 				</div>
+		 				<div class="col-md-6">
+		 					<h4>Verify your code</h4>
+		 					<p>After you are done with the changes, verify that the code and syntax is correct. Once it is verified, the button will get disabled.</p>
+		 				</div>
+		 			</div>
+		 			<div class="row mt16">
+		 				<div class="col-md-2 col-md-offset-2">
+		 					<img class="img img-responsive" src="img/code_compiled.svg" alt="Arduino Development" width="110px" />
+		 				</div>
+		 				<div class="col-md-6">
+		 					<h4>Check the magic</h4>
+		 					<p>Once you have a verified code, click on compile. After the progress is complete, you will see the fruit of your work live through the webcam.</p>
+		 				</div>
+		 			</div>
+	 			</div>
+	 			<div class="main-instructions">
+	 				<div class="row">
+	 					<div class="col-md-6 col-md-offset-4">
+	 						<a href="/tesis/cube_editor_en" class="btn btn-primary">Arduino Cube</a>
+	 						<a href="/tesis/crane_editor_en" class="btn btn-primary">Arduino Crane</a>
+	 					</div>
+ 					</div>
+	 			</div>
+ 			</div>
+ 		</section>
+ 	</main>
 	
 	<footer>
 		
 	</footer> 
 </body>
-
 </html> 
