--- a/index_en.html
+++ b/index_en.html
@@ -100,8 +100,8 @@
 	 			<div class="main-instructions">
 	 				<div class="row">
 	 					<div class="col-md-6 col-md-offset-4">
-	 						<a href="/tesis/cube_editor_en" class="btn btn-primary">Arduino Cube</a>
-	 						<a href="/tesis/crane_editor_en" class="btn btn-primary">Arduino Crane</a>
+	 						<a href="/tesis/cube_editor_en.html" class="btn btn-primary">Arduino Cube</a>
+	 						<a href="/tesis/crane_editor_en.html" class="btn btn-primary">Arduino Crane</a>
 	 					</div>
  					</div>
 	 			</div>
