Selector de idioma

--- a/index_es.html
+++ b/index_es.html
@@ -1,6 +1,6 @@
 <!-- index_es -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <!-- HEAD -->
 <head>
@@ -38,7 +38,7 @@
 		-->
 		
 		<div class="page-title">
-			<span>Departamento de Ingeniería Eléctrica, Electrónica y de Control INGLES</span>
+			<span>Departamento de Ingeniería Eléctrica, Electrónica y de Control</span>
 		</div>
 		
 		<div class="lang-header">
@@ -50,8 +50,8 @@
 					</button>
 					
 					<ul id="flag" class="dropdown-menu" role="menu">
-						<li><a href="/tesis/index_en.html"><img src="http://relle.ufsc.br/img/en.png"/></a></li>
 						<li><a href="/tesis/index_es.html"><img src="http://relle.ufsc.br/img/es.png"/></a></li>
+						<li><a href="/tesis/index_en.html"><img src="http://relle.ufsc.br/img/en.png"/></a></li>
 					</ul>
 				</div>
 			</ul>
@@ -63,9 +63,9 @@
  		<section>
  			<div class="container">
 	 			<div class="row">
-	 				<div class="col-md-10 col-md-offset-1 text-center">
+	 				<div class="col-md-8 col-md-offset-2 text-center">
 	 					<h2>Environment for Arduino Development</h2>
-	 					<h3 class="mt16">This environment allows students to access a real-time tool for developing, verifying and running C code for Arduino.</h3>
+	 					<h4 class="mt16">This environment allows students to access a real-time tool for developing, verifying and running C code for Arduino.</h4>
 	 				</div>
 	 			</div>
 	 			<div class="main-instructions">
@@ -100,8 +100,8 @@
 	 			<div class="main-instructions">
 	 				<div class="row">
 	 					<div class="col-md-6 col-md-offset-4">
-	 						<a href="/tesis/cube_editor_en" class="btn btn-primary">Arduino Cube</a>
-	 						<a href="/tesis/crane_editor_en" class="btn btn-primary">Arduino Crane</a>
+	 						<a href="/tesis/cube_editor_en.html" class="btn btn-primary">Arduino Cube</a>
+	 						<a href="/tesis/crane_editor_en.html" class="btn btn-primary">Arduino Crane</a>
 	 					</div>
  					</div>
 	 			</div>
