--- a/cube_editor_es.html
+++ b/cube_editor_es.html
@@ -45,7 +45,7 @@
 		-->
 		
 		<div class="page-title">
-			<span>Departamento de Ingeniería Eléctrica, Electrónica y de Control INGLES</span>
+			<span>Departamento de Ingeniería Eléctrica, Electrónica y de Control</span>
 		</div>
 		
 		<div class="lang-header">
