iconos del lang en la pagina del cubo

--- a/cube_editor_es.html
+++ b/cube_editor_es.html
@@ -52,13 +52,13 @@
 			<ul class="nav navbar-nav navbar-right">
 				<div class="btn-group">
 					<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-						<li><a href="#"><img src="http://relle.ufsc.br/img/es.png"/></a></li>
+						<li><a href="#"><img class="flag-ico" src="img/Spain.ico"/></a></li>
 						<span class="caret"></span>
 					</button>
 					
 					<ul id="flag" class="dropdown-menu" role="menu">
-						<li><a href="/tesis/index_en.html"><img src="http://relle.ufsc.br/img/en.png"/></a></li>
-						<li><a href="/tesis/index_es.html"><img src="http://relle.ufsc.br/img/es.png"/></a></li>
+						<li><a href="index_es.html"><img class="flag-ico" src="img/Spain.ico"/></a></li>
+						<li><a href="index_en.html"><img class="flag-ico" src="img/UK.ico"/></a></li>
 					</ul>
 				</div>
 			</ul>
