Iframe con cámara arduino

--- a/cube_editor_es.html
+++ b/cube_editor_es.html
@@ -61,12 +61,11 @@
 			</ul>
 		</div>	
 		
- 	</header>
+	</header>
 	
 	<main>
 		<section class="">
 			<div class="container">
-
 				<div class="editor">
 					<div class="editor-nav">
 						<div class="row">
@@ -99,7 +98,7 @@
 							</div>
 						</div>
 					</div>
-				
+
 					<form id="compile" action="php/compile.php" method="post"">
 						<textarea id="text" name="text"></textarea>
 						<script>
@@ -118,6 +117,9 @@
 					</form>
 				</div>
 
+				<div class="camera">
+				<iframe allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" webkitallowfullscreen="webkitallowfullscreen" src="http://62.204.201.150:63/videostream.cgi?user=ZwgCsCQITjXE&pwd=aByvqUmXAMj6&resolution=32&rate=0" width="650" height="485"></iframe>
+				</div>
 			</div>
 		</section>
 	</main>
