estilos para iframe

--- a/cube_editor_es.html
+++ b/cube_editor_es.html
@@ -65,7 +65,7 @@
 	
 	<main>
 		<section class="">
-			<div class="container">
+			<div class="main-container">
 				<div class="editor">
 					<div class="editor-nav">
 						<div class="row">
@@ -118,7 +118,7 @@
 				</div>
 
 				<div class="camera">
-				<iframe allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" webkitallowfullscreen="webkitallowfullscreen" src="http://62.204.201.150:63/videostream.cgi?user=ZwgCsCQITjXE&pwd=aByvqUmXAMj6&resolution=32&rate=0" width="650" height="485"></iframe>
+				<iframe allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" webkitallowfullscreen="webkitallowfullscreen" src="http://62.204.201.150:63/videostream.cgi?user=ZwgCsCQITjXE&pwd=aByvqUmXAMj6&resolution=32&rate=0" width="650"></iframe>
 				</div>
 			</div>
 		</section>
