--- a/index_es.html
+++ b/index_es.html
@@ -64,8 +64,8 @@
  			<div class="container">
 	 			<div class="row">
 	 				<div class="col-md-8 col-md-offset-2 text-center">
-	 					<h2>Environment for Arduino Development</h2>
-	 					<h4 class="mt16">This environment allows students to access a real-time tool for developing, verifying and running C code for Arduino.</h4>
+	 					<h2>Entorno de desarrollo para Arduino</h2>
+	 					<h4 class="mt16">Este entorno de desarrollo permite a los estudiantes acceder a una herramienta a tiempo real para desarrollar, compilar y ejecutar código en lenguaje C para Arduino.</h4>
 	 				</div>
 	 			</div>
 	 			<div class="main-instructions">
@@ -74,8 +74,8 @@
 		 					<img class="img img-responsive" src="img/console.svg" alt="Arduino Development" width="110px" />
 		 				</div>
 		 				<div class="col-md-6">
-		 					<h4>Load your code</h4>
-		 					<p>Your session will last <strong>10 minutes</strong>. You can upload your own file, use the console, or check one of the pre-loaded examples.</p>
+		 					<h4>Introduce tu código</h4>
+		 					<p>Tu sesión durará <strong>10 minutos</strong>. Puedes usar el editor de código para crear un nuevo Sketch, cargarlo desde tu equipo o utilizar uno de los ejemplos predefinidos disponibles.</p>
 		 				</div>
 	 				</div>
 	 				<div class="row mt16">
@@ -83,8 +83,8 @@
 		 					<img class="img img-responsive" src="img/code_verified.svg" alt="Arduino Development" width="110px" />
 		 				</div>
 		 				<div class="col-md-6">
-		 					<h4>Verify your code</h4>
-		 					<p>After you are done with the changes, verify that the code and syntax is correct. Once it is verified, the button will get disabled.</p>
+		 					<h4>Verifica tu código</h4>
+		 					<p>Una vez que hayas terminado el Sketch, compila tu código para comprobar que la sintaxis es correcta y puede ser ejecutado.</p>
 		 				</div>
 		 			</div>
 		 			<div class="row mt16">
@@ -92,16 +92,16 @@
 		 					<img class="img img-responsive" src="img/code_compiled.svg" alt="Arduino Development" width="110px" />
 		 				</div>
 		 				<div class="col-md-6">
-		 					<h4>Check the magic</h4>
-		 					<p>Once you have a verified code, click on compile. After the progress is complete, you will see the fruit of your work live through the webcam.</p>
+		 					<h4>Ejecuta el Sketch</h4>
+		 					<p>Cuando el Sketch haya sido compilado correctamente, puedes ejecutarlo y ver el fruto de tu trabajo a tiempo real a través de la webcam.</p>
 		 				</div>
 		 			</div>
 	 			</div>
 	 			<div class="main-instructions">
 	 				<div class="row">
 	 					<div class="col-md-6 col-md-offset-4">
-	 						<a href="cube_editor_es.html" class="btn btn-primary">Arduino Cube</a>
-	 						<a href="crane_editor_es.html" class="btn btn-primary">Arduino Crane</a>
+	 						<a href="cube_editor_es.html" class="btn btn-primary">Cubo Arduino</a>
+	 						<a href="crane_editor_es.html" class="btn btn-primary">Grúa Arduino</a>
 	 					</div>
  					</div>
 	 			</div>
