--- a/index_en.html
+++ b/index_en.html
@@ -38,7 +38,7 @@
 		-->
 		
 		<div class="page-title">
-			<span>Departamento de Ingeniería Eléctrica, Electrónica y de Control INGLES</span>
+			<span>Department of Electrical, Electronics and Control Engineering</span>
 		</div>
 		
 		<div class="lang-header">
@@ -65,7 +65,7 @@
 	 			<div class="row">
 	 				<div class="col-md-8 col-md-offset-2 text-center">
 	 					<h2>Environment for Arduino Development</h2>
-	 					<h4 class="mt16">This environment allows students to access a real-time tool for developing, verifying and running C code for Arduino.</h4>
+	 					<h4 class="mt16">This environment allows students to access a real-time tool for developing, compiling and running C code for Arduino.</h4>
 	 				</div>
 	 			</div>
 	 			<div class="main-instructions">
@@ -74,8 +74,8 @@
 		 					<img class="img img-responsive" src="img/console.svg" alt="Arduino Development" width="110px" />
 		 				</div>
 		 				<div class="col-md-6">
-		 					<h4>Load your code</h4>
-		 					<p>Your session will last <strong>10 minutes</strong>. You can upload your own file, use the console, or check one of the pre-loaded examples.</p>
+		 					<h4>Insert your code</h4>
+		 					<p>Your session will last <strong>10 minutes</strong>. You can use the code editor to create a new Sketch, upload your own file, or apply one of the pre-defined examples.</p>
 		 				</div>
 	 				</div>
 	 				<div class="row mt16">
@@ -84,7 +84,7 @@
 		 				</div>
 		 				<div class="col-md-6">
 		 					<h4>Verify your code</h4>
-		 					<p>After you are done with the changes, verify that the code and syntax is correct. Once it is verified, the button will get disabled.</p>
+		 					<p>After you are done with the Sketch, compile your code in order to check that the syntax is correct and therefore, it is possible to execute it.</p>
 		 				</div>
 		 			</div>
 		 			<div class="row mt16">
@@ -92,16 +92,16 @@
 		 					<img class="img img-responsive" src="img/code_compiled.svg" alt="Arduino Development" width="110px" />
 		 				</div>
 		 				<div class="col-md-6">
-		 					<h4>Check the magic</h4>
-		 					<p>Once you have a verified code, click on compile. After the progress is complete, you will see the fruit of your work live through the webcam.</p>
+		 					<h4>Execute the Sketch</h4>
+		 					<p>Once the Sketch has been successfully compiled, you can execute it and see the fruit of your work live through the webcam.</p>
 		 				</div>
 		 			</div>
 	 			</div>
 	 			<div class="main-instructions">
 	 				<div class="row">
 	 					<div class="col-md-6 col-md-offset-4">
-	 						<a href="/tesis/cube_editor_en.html" class="btn btn-primary">Arduino Cube</a>
-	 						<a href="/tesis/crane_editor_en.html" class="btn btn-primary">Arduino Crane</a>
+	 						<a href="/tesis/cube_editor_es.html" class="btn btn-primary">Arduino Cube</a>
+	 						<a href="/tesis/crane_editor_es.html" class="btn btn-primary">Arduino Crane</a>
 	 					</div>
  					</div>
 	 			</div>
